2007-09-13 paul_d_austin <paul.austin@revolsys.com
        * Fixed conf directory location in openjump.sh and removed batik sub dir

2007-09-11 beckerl <becker.larry@gmail.com>
          * Added the LayerPropertiesPlugIn which adds a menu item
            "Layer Properties" to the Layer Name popup menu.  This
            feature will display layer information such as name, number
            of features, number of points, number of attributes, geometry type,
            DataSource class, and source path.  It works on single or multiple
            layer selections.  It also includes a transparency adjustment slider
            that works for layer selections.
            Language file entries have been made.  Only German translation is done.
            org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.java
            
2007-09-11 beckerl <becker.larry@gmail.com>
          * Closed the shape file after it was read to allow it to be deleted.
            com.vividsolutions.jump.io.ShapefileReader.java
            org.geotools.shapefile.Shapefile.java
          
2007-09-10 Andreas Schmitz <schmitz@lat-lon.de>
        src/language/jump_fi.properties,
        src/language/jump.properties,
        src/language/jump_zh_CN.properties,
        src/language/jump_en.properties,
        src/language/jump_pt.properties,
        src/language/jump_pt_BR.properties,
        src/language/jump_es.properties,
        src/language/jump_fr.properties,
        src/language/jump_de.properties,
        src/de/latlon/deejump/plugin/style/LayerStyle2SLDPlugIn.java,
        src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
        Added namespace capability to SLD export.

2007-09-10 Andreas Schmitz <schmitz@lat-lon.de>
        src/language/jump_fi.properties,
        src/language/jump.properties,
        src/language/jump_zh_CN.properties,
        src/language/jump_en.properties,
        src/language/jump_pt.properties,
        src/language/jump_pt_BR.properties,